azure directory integration on application

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,19 +9,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">HOME</a>
+                    <a class="nav-link" aria-current="page" href="#"routerLinkActive="active">HOME</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">EXPLORE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">OUR TEAM</a>
+                    <a class="nav-link" href="https://smbxl.com/team.cfm" target="_blank">OUR TEAM</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">CAREER</a>
+                    <a class="nav-link" href="https://smbxl.com/career.cfm" target="_blank">CAREER</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">CONTACT</a>
+                    <a class="nav-link" href="https://smbxl.com/contact.cfm" target="_blank">CONTACT</a>
                 </li>
                 <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
