--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -25,7 +25,9 @@ ul li a {
     color: #1B3D6E;
     font-weight: bold;
 }
-
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+    color: #106eea;
+}
 /* select{
     width: 203px;
     border: none;
