added timesheet button

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -71,6 +71,7 @@
                           <li><span class="user-email">{{this.userService.userDetails.mail}}</span></li>
                           <li><hr class="dropdown-divider" /></li>
                           <li><button class="dropdown-item" routerLink="user/profile"> <i class="fa-regular fa-user icon_style"></i>Profile</button></li>
+                          <li><button class="dropdown-item" routerLink="user/timesheet"><i class="fa-solid fa-hourglass-half icon_style"></i>Timesheet</button></li>
                           
                           <!-- <li><button class="dropdown-item" href="#"> <i class="fa-solid fa-right-from-bracket"></i>Logout</button></li> -->
                           <li><button class="dropdown-item" (click)="auth.logout()" > <i class="fa-solid fa-right-from-bracket icon_style"></i>Logout</button></li>
