--- a/src/app/user/components/timesheet/timesheet.component.html
+++ b/src/app/user/components/timesheet/timesheet.component.html
@@ -53,7 +53,7 @@
                     </div>
                   </div>
                   <div class="empdetails">
-                    <div class="mb-2">
+                    <!-- <div class="mb-2">
                       <label class="form-label">Employee ID :</label>
                       <input
                         type="number"
@@ -63,7 +63,7 @@
                         formControlName="empId"
                         required
                       />
-                    </div>
+                    </div> -->
                     <div class="mb-2">
                       <label class="form-label">Employee Name :</label>
                       <input
